--- a/ui/ui_file/modular_robot_control.ui
+++ b/ui/ui_file/modular_robot_control.ui
@@ -1679,6 +1679,112 @@
        <string>位姿增量deg</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>274</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>位姿速度deg/s</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_25">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>224</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>位移速度mm/s</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_97">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>264</y>
+        <width>81</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;速度范围1-30度/s&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_98">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>220</y>
+        <width>81</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;速度范围1-30度/s&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_101">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>320</y>
+        <width>81</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>设置</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_3">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>420</y>
+        <width>113</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>G0_基座</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_4">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>470</y>
+        <width>113</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>G6_基座</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QPushButton" name="pushButton_8">
@@ -1958,8 +2064,8 @@
    <slot>joint_i1_command()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>185</y>
+     <x>461</x>
+     <y>217</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -1974,8 +2080,8 @@
    <slot>joint_t2_command()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>185</y>
+     <x>461</x>
+     <y>284</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -1990,8 +2096,8 @@
    <slot>joint_t3_command()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>185</y>
+     <x>461</x>
+     <y>351</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -2006,8 +2112,8 @@
    <slot>joint_t4_command()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>185</y>
+     <x>461</x>
+     <y>418</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -2022,8 +2128,8 @@
    <slot>joint_i5_command()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>185</y>
+     <x>461</x>
+     <y>485</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -2038,8 +2144,8 @@
    <slot>joint_velocity_set_posMode()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>211</x>
-     <y>545</y>
+     <x>461</x>
+     <y>571</y>
     </hint>
     <hint type="destinationlabel">
      <x>691</x>
@@ -2575,6 +2681,54 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_101</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow_modular_robot</receiver>
+   <slot>descartes_incre_vel_set()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>332</x>
+     <y>424</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>559</x>
+     <y>167</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radioButton_3</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow_modular_robot</receiver>
+   <slot>set_base_0()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>294</x>
+     <y>540</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>561</x>
+     <y>619</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radioButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow_modular_robot</receiver>
+   <slot>set_base_6()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>293</x>
+     <y>588</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>565</x>
+     <y>538</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>joint_i1_command()</slot>
@@ -2615,5 +2769,6 @@
   <slot>descartes_ry_incre_sub()</slot>
   <slot>descartes_rz_incre_add()</slot>
   <slot>descartes_rz_incre_sub()</slot>
+  <slot>descartes_incre_vel_set()</slot>
  </slots>
 </ui>
